--- a/dataSciencester/dataSciencester.ipynb
+++ b/dataSciencester/dataSciencester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,32 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "users = [\n",
-    "    { \"id\": 0, \"name\": \"Hero\" },\n",
-    "    { \"id\": 1, \"name\": \"Dunn\" },\n",
-    "    { \"id\": 2, \"name\": \"Sue\" },\n",
-    "    { \"id\": 3, \"name\": \"Chi\" },\n",
-    "    { \"id\": 4, \"name\": \"Thor\" },\n",
-    "    { \"id\": 5, \"name\": \"Clive\" },\n",
-    "    { \"id\": 6, \"name\": \"Hicks\" },\n",
-    "    { \"id\": 7, \"name\": \"Devin\" },\n",
-    "    { \"id\": 8, \"name\": \"Kate\" },\n",
-    "    { \"id\": 9, \"name\": \"Klein\" }\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "friendship_pairs = [(0, 1), (0, 2), (1, 2), (1, 3), (2, 3), (3, 4),\n",
-    "(4, 5), (5, 6), (5, 7), (6, 8), (7, 8), (8, 9)]"
+    "users = [\n",
+    "    {\"id\": 0, \"name\": \"Hero\"},\n",
+    "    {\"id\": 1, \"name\": \"Dunn\"},\n",
+    "    {\"id\": 2, \"name\": \"Sue\"},\n",
+    "    {\"id\": 3, \"name\": \"Chi\"},\n",
+    "    {\"id\": 4, \"name\": \"Thor\"},\n",
+    "    {\"id\": 5, \"name\": \"Clive\"},\n",
+    "    {\"id\": 6, \"name\": \"Hicks\"},\n",
+    "    {\"id\": 7, \"name\": \"Devin\"},\n",
+    "    {\"id\": 8, \"name\": \"Kate\"},\n",
+    "    {\"id\": 9, \"name\": \"Klein\"},\n",
+    "]"
    ]
   },
   {
@@ -45,17 +35,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the dict with an empty list for each user id:\n",
-    "friendships = {user[\"id\"]: [] for user in users}\n",
-    "# And loop over the friendship pairs to populate it:\n",
-    "for i, j in friendship_pairs:\n",
-    "    friendships[i].append(j) # Add j as a friend of user i\n",
-    "    friendships[j].append(i) # Add i as a friend of user j"
+    "friendship_pairs = [\n",
+    "    (0, 1),\n",
+    "    (0, 2),\n",
+    "    (1, 2),\n",
+    "    (1, 3),\n",
+    "    (2, 3),\n",
+    "    (3, 4),\n",
+    "    (4, 5),\n",
+    "    (5, 6),\n",
+    "    (5, 7),\n",
+    "    (6, 8),\n",
+    "    (7, 8),\n",
+    "    (8, 9),\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the dict with an empty list for each user id:\n",
+    "friendships = {user[\"id\"]: [] for user in users}\n",
+    "# And loop over the friendship pairs to populate it:\n",
+    "for i, j in friendship_pairs:\n",
+    "    friendships[i].append(j)  # Add j as a friend of user i\n",
+    "    friendships[j].append(i)  # Add i as a friend of user j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +85,7 @@
        " 9: [8]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +106,13 @@
     "    friend_ids = friendships[user_id]\n",
     "    return len(friend_ids)\n",
     "\n",
-    "total_connections = sum(number_of_friends(user) for user in users) # 24"
+    "\n",
+    "total_connections = sum(number_of_friends(user) for user in users)  # 24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_users = len(users) # length of the users list\n",
-    "avg_connections = total_connections / num_users # 24 / 10 == 2.4"
+    "num_users = len(users)  # length of the users list\n",
+    "avg_connections = total_connections / num_users  # 24 / 10 == 2.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -163,18 +176,17 @@
        " (9, 1)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a list (user_id, number_of_friends).\n",
-    "num_friends_by_id = [(user[\"id\"], number_of_friends(user)) \n",
-    "                        for user in users]\n",
-    "num_friends_by_id.sort(                             # Sort the list\n",
-    "    key=lambda id_and_friends: id_and_friends[1],   # by num_friends\n",
-    "    reverse=True)                                   # largest to smallest\n",
+    "num_friends_by_id = [(user[\"id\"], number_of_friends(user)) for user in users]\n",
+    "num_friends_by_id.sort(  # Sort the list\n",
+    "    key=lambda id_and_friends: id_and_friends[1], reverse=True  # by num_friends\n",
+    ")  # largest to smallest\n",
     "\n",
     "\n",
     "num_friends_by_id"
@@ -182,25 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter\n",
+    "\n",
+    "\n",
     "def friends_of_friends(user):\n",
     "    user_id = user[\"id\"]\n",
     "    return Counter(\n",
-    "    foaf_id\n",
-    "    for friend_id in friendships[user_id]   # For each of my friends,\n",
-    "    for foaf_id in friendships[friend_id]   # find their friends\n",
-    "    if foaf_id != user_id                   # who aren't me\n",
-    "    and foaf_id not in friendships[user_id] # and aren't my friends.\n",
+    "        foaf_id\n",
+    "        for friend_id in friendships[user_id]  # For each of my friends,\n",
+    "        for foaf_id in friendships[friend_id]  # find their friends\n",
+    "        if foaf_id != user_id  # who aren't me\n",
+    "        and foaf_id not in friendships[user_id]  # and aren't my friends.\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -216,13 +230,13 @@
        "'This correctly tells Chi (id 3) that she has two mutual friends with Hero (id\\n0) but only one mutual friend with Clive (id 5).'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(friends_of_friends(users[3]))         # Counter({0: 2, 5: 1})\n",
+    "print(friends_of_friends(users[3]))  # Counter({0: 2, 5: 1})\n",
     "\n",
     "\"\"\"This correctly tells Chi (id 3) that she has two mutual friends with Hero (id\n",
     "0) but only one mutual friend with Clive (id 5).\"\"\""
@@ -230,31 +244,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "interests = [\n",
-    "    (0, \"Hadoop\"), (0, \"Big Data\"), (0, \"HBase\"), (0, \"Java\"),\n",
-    "    (0, \"Spark\"), (0, \"Storm\"), (0, \"Cassandra\"),\n",
-    "    (1, \"NoSQL\"), (1, \"MongoDB\"), (1, \"Cassandra\"), (1, \"HBase\"),\n",
-    "    (1, \"Postgres\"), (2, \"Python\"), (2, \"scikit-learn\"), (2, \"scipy\"),\n",
-    "    (2, \"numpy\"), (2, \"statsmodels\"), (2, \"pandas\"), (3, \"R\"), (3, \"Python\"),\n",
-    "    (3, \"statistics\"), (3, \"regression\"), (3, \"probability\"),\n",
-    "    (4, \"machine learning\"), (4, \"regression\"), (4, \"decision trees\"),\n",
-    "    (4, \"libsvm\"), (5, \"Python\"), (5, \"R\"), (5, \"Java\"), (5, \"C++\"),\n",
-    "    (5, \"Haskell\"), (5, \"programming languages\"), (6, \"statistics\"),\n",
-    "    (6, \"probability\"), (6, \"mathematics\"), (6, \"theory\"),\n",
-    "    (7, \"machine learning\"), (7, \"scikit-learn\"), (7, \"Mahout\"),\n",
-    "    (7, \"neural networks\"), (8, \"neural networks\"), (8, \"deep learning\"),\n",
-    "    (8, \"Big Data\"), (8, \"artificial intelligence\"), (9, \"Hadoop\"),\n",
-    "    (9, \"Java\"), (9, \"MapReduce\"), (9, \"Big Data\")\n",
+    "    (0, \"Hadoop\"),\n",
+    "    (0, \"Big Data\"),\n",
+    "    (0, \"HBase\"),\n",
+    "    (0, \"Java\"),\n",
+    "    (0, \"Spark\"),\n",
+    "    (0, \"Storm\"),\n",
+    "    (0, \"Cassandra\"),\n",
+    "    (1, \"NoSQL\"),\n",
+    "    (1, \"MongoDB\"),\n",
+    "    (1, \"Cassandra\"),\n",
+    "    (1, \"HBase\"),\n",
+    "    (1, \"Postgres\"),\n",
+    "    (2, \"Python\"),\n",
+    "    (2, \"scikit-learn\"),\n",
+    "    (2, \"scipy\"),\n",
+    "    (2, \"numpy\"),\n",
+    "    (2, \"statsmodels\"),\n",
+    "    (2, \"pandas\"),\n",
+    "    (3, \"R\"),\n",
+    "    (3, \"Python\"),\n",
+    "    (3, \"statistics\"),\n",
+    "    (3, \"regression\"),\n",
+    "    (3, \"probability\"),\n",
+    "    (4, \"machine learning\"),\n",
+    "    (4, \"regression\"),\n",
+    "    (4, \"decision trees\"),\n",
+    "    (4, \"libsvm\"),\n",
+    "    (5, \"Python\"),\n",
+    "    (5, \"R\"),\n",
+    "    (5, \"Java\"),\n",
+    "    (5, \"C++\"),\n",
+    "    (5, \"Haskell\"),\n",
+    "    (5, \"programming languages\"),\n",
+    "    (6, \"statistics\"),\n",
+    "    (6, \"probability\"),\n",
+    "    (6, \"mathematics\"),\n",
+    "    (6, \"theory\"),\n",
+    "    (7, \"machine learning\"),\n",
+    "    (7, \"scikit-learn\"),\n",
+    "    (7, \"Mahout\"),\n",
+    "    (7, \"neural networks\"),\n",
+    "    (8, \"neural networks\"),\n",
+    "    (8, \"deep learning\"),\n",
+    "    (8, \"Big Data\"),\n",
+    "    (8, \"artificial intelligence\"),\n",
+    "    (9, \"Hadoop\"),\n",
+    "    (9, \"Java\"),\n",
+    "    (9, \"MapReduce\"),\n",
+    "    (9, \"Big Data\"),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -268,6 +317,7 @@
    ],
    "source": [
     "from collections import defaultdict\n",
+    "\n",
     "# Keys are interests, values are lists of user_ids with that interest\n",
     "\n",
     "user_ids_by_interest = defaultdict(list)\n",
@@ -287,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -307,12 +357,13 @@
     "        if interested_user_id != user[\"id\"]\n",
     "    )\n",
     "\n",
+    "\n",
     "print(most_common_interests_with(users[3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -328,11 +379,16 @@
    ],
    "source": [
     "salaries_and_tenures = [\n",
-    "    (83000, 8.7), (88000, 8.1),\n",
-    "    (48000, 0.7), (76000, 6),\n",
-    "    (69000, 6.5), (76000, 7.5),\n",
-    "    (60000, 2.5), (83000, 10),\n",
-    "    (48000, 1.9), (63000, 4.2)\n",
+    "    (83000, 8.7),\n",
+    "    (88000, 8.1),\n",
+    "    (48000, 0.7),\n",
+    "    (76000, 6),\n",
+    "    (69000, 6.5),\n",
+    "    (76000, 7.5),\n",
+    "    (60000, 2.5),\n",
+    "    (83000, 10),\n",
+    "    (48000, 1.9),\n",
+    "    (63000, 4.2),\n",
     "]\n",
     "\n",
     "# Separate salaries and tenures\n",
@@ -341,17 +397,17 @@
     "\n",
     "# Plotting\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.scatter(salaries, tenures, color='blue')\n",
-    "plt.title('Salaries vs Tenures')\n",
-    "plt.xlabel('Salaries')\n",
-    "plt.ylabel('Years')\n",
+    "plt.scatter(salaries, tenures, color=\"blue\")\n",
+    "plt.title(\"Salaries vs Tenures\")\n",
+    "plt.xlabel(\"Salaries\")\n",
+    "plt.ylabel(\"Years\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -389,14 +445,15 @@
        " 'between two and five': 61500.0}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "average_salary_by_bucket = {\n",
-    "    tenure_bucket: sum(salaries) / len(salaries) for tenure_bucket, salaries in salary_by_tenure_bucket.items()\n",
+    "    tenure_bucket: sum(salaries) / len(salaries)\n",
+    "    for tenure_bucket, salaries in salary_by_tenure_bucket.items()\n",
     "}\n",
     "\n",
     "average_salary_by_bucket"
@@ -404,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +473,58 @@
     "    else:\n",
     "        return \"paid\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_and_counts = Counter(\n",
+    "    word for user, interest in interests for word in interest.lower().split()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "big 3\n",
+      "data 3\n",
+      "java 3\n",
+      "python 3\n",
+      "learning 3\n",
+      "hadoop 2\n",
+      "hbase 2\n",
+      "cassandra 2\n",
+      "scikit-learn 2\n",
+      "r 2\n",
+      "statistics 2\n",
+      "regression 2\n",
+      "probability 2\n",
+      "machine 2\n",
+      "neural 2\n",
+      "networks 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word, count in words_and_counts.most_common():\n",
+    "    if count > 1:\n",
+    "        print(word, count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
