Visualized the DTR

--- a/SuperDataScienceCourse/support_vector_regression/decision_tree_regression.ipynb
+++ b/SuperDataScienceCourse/support_vector_regression/decision_tree_regression.ipynb
@@ -517,7 +517,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_grid = np.arange(min(X),max(X), 0.1)\n",
+    "X_grid = X_grid.reshape((len(X_grid), 1))\n",
+    "plt.scatter(X, y, color=\"red\", marker=\"+\")\n",
+    "plt.plot(X_grid, regressor.predict(X_grid.reshape(-1, 1)), color=\"blue\")\n",
+    "plt.title(\"Decision Tree Regression Model\")\n",
+    "plt.xlabel(\"Position Level\")\n",
+    "plt.ylabel(\"Salary\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
