--- a/SuperDataScienceCourse/support_vector_regression/decision_tree_regression.ipynb
+++ b/SuperDataScienceCourse/support_vector_regression/decision_tree_regression.ipynb
@@ -476,7 +476,7 @@
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "regressor = DecisionTreeRegressor()\n",
+    "regressor = DecisionTreeRegressor(random_state=0)\n",
     "regressor.fit(X.reshape(-1, 1), y)"
    ]
   },
