worked with diabetes dataset using SVM model

--- a/SuperDataScienceCourse/support_vector_machine/support_vector_machine.ipynb
+++ b/SuperDataScienceCourse/support_vector_machine/support_vector_machine.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the K Nearest Neighbors model on the Training set"
+    "## Training the SVC model on the Training set"
    ]
   },
   {
